--- a/src/components/UI/Modal.css
+++ b/src/components/UI/Modal.css
@@ -1,5 +1,9 @@
 .modal {
   width: 100%;
   height: 100%;
-  background-color: rgba(120, 120, 120, 120);
+  background-color: rgba(250, 120, 120, 120);
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: none;
 }
