--- a/src/components/UI/Modal.css
+++ b/src/components/UI/Modal.css
@@ -1,9 +1,25 @@
 .modal {
   width: 100%;
   height: 100%;
-  background-color: rgba(250, 120, 120, 120);
+  background-color: rgba(250, 120, 120, 0.5);
   position: absolute;
   top: 0;
   left: 0;
   display: none;
+}
+#error-modal_card {
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
+  background-color: red;
+  width: fit-content;
+  height: fit-content;
+  margin: 3em auto;
+  padding: 2em;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  flex-direction: column;
+}
+#error-modal_card > hr {
+  width: 100%;
 }
