--- a/src/components/UI/Modal.css
+++ b/src/components/UI/Modal.css
@@ -5,7 +5,12 @@
   position: absolute;
   top: 0;
   left: 0;
+}
+.hideModal {
   display: none;
+}
+.showModal {
+  display: inline-block;
 }
 #error-modal_card {
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.25);
